<resources>
    <string name="app_name">AndroidCourseApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_et_email_hint">Enter your email</string>
    <string name="login_et_password_hint">Enter your password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_register">Register</string>
    <string name="table_name">Table</string>
    <string name="login_et_re_password_hint">Repeat your password</string>
</resources>
